--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             <button class="button percent">%</button>
             <button class="button random">R</button>
             <button class="button divide">/</button>
-            <button class="button seven">7</button>
-            <button class="button eight">8</button>
-            <button class="button nine">9</button>
+            <button class="button seven number">7</button>
+            <button class="button eight number">8</button>
+            <button class="button nine number">9</button>
             <button class="button minus">-</button>
-            <button class="button four">4</button>
-            <button class="button five">5</button>
-            <button class="button six">6</button>
+            <button class="button four number">4</button>
+            <button class="button five number">5</button>
+            <button class="button six number">6</button>
             <button class="button plus">+</button>
-            <button class="button one">1</button>
-            <button class="button two">2</button>
-            <button class="button three">3</button>
+            <button class="button one number">1</button>
+            <button class="button two number">2</button>
+            <button class="button three number">3</button>
             <button class="button dot">.</button>
-            <button class="button zero">0</button>
+            <button class="button zero number">0</button>
             <button class="button equal">=</button>
             <button class="button delete"><i class="fas fa-backspace"></i></button>
         </div>
