added time to calculator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Network Bar -->
         <nav class="nav">
-            <p>11:23</p>
+            <p class="time"></p>
             <ul>
                 <li><i class="fas fa-signal"></i></li>
                 <li><i class="fas fa-wifi"></i></li>
