Modified function to show numbers on screen when clicked and return the number

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
         <!-- Display -->
         <div class="display">
-            <div class="problem">
-                <p>1 + 1</p>
-                <p>2 * 3</p>
-            </div>
+            <div class="problem"></div>
             <div class="solution">
                 <p>= 6</p>
             </div>
