--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 
         <!-- Display -->
         <div class="display">
-            <div class="problem"></div>
+            <div class="problem">
+                <p></p>
+            </div>
             <div class="solution">
-                <p>= 6</p>
+                <p></p>
             </div>
         </div>
 
@@ -34,23 +36,23 @@
                 <button class="button big"></button>
                 <button class="button small"></button>
             </div>
-            <button class="button on">On/Off</button>
+            <button class=" on">On/Off</button>
             <button class="button clear">C</button>
             <button class="button open-b">(</button>
             <button class="button close-b">)</button>
-            <button class="button times">*</button>
-            <button class="button power">^</button>
+            <button class="button times operator">*</button>
+            <button class="button power operator">^</button>
             <button class="button percent">%</button>
             <button class="button random">R</button>
-            <button class="button divide">/</button>
+            <button class="button divide operator">/</button>
             <button class="button seven number">7</button>
             <button class="button eight number">8</button>
             <button class="button nine number">9</button>
-            <button class="button minus">-</button>
+            <button class="button minus operator">-</button>
             <button class="button four number">4</button>
             <button class="button five number">5</button>
             <button class="button six number">6</button>
-            <button class="button plus">+</button>
+            <button class="button plus operator">+</button>
             <button class="button one number">1</button>
             <button class="button two number">2</button>
             <button class="button three number">3</button>
