Really struggling here. Just adjusted displayValue function

--- a/index.html
+++ b/index.html
@@ -34,30 +34,30 @@
                 <button class="button big"></button>
                 <button class="button small"></button>
             </div>
-            <button class=" on">On/Off</button>
-            <button class="button clear">C</button>
-            <button class="button open-b">(</button>
-            <button class="button close-b">)</button>
-            <button class="button times operator">*</button>
-            <button class="button power operator">^</button>
-            <button class="button percent">%</button>
-            <button class="button random">R</button>
-            <button class="button divide operator">/</button>
+            <button class="on" data-action="on">On/Off</button>
+            <button class="button clear" data-action="clear">C</button>
+            <button class="button open-b" data-action="open-b">(</button>
+            <button class="button close-b" data-action="close-b">)</button>
+            <button class="button times operator" data-action="times">&times;</button>
+            <button class="button power operator" data-action="power">^</button>
+            <button class="button percent" data-action="percent">%</button>
+            <button class="button random" data-action="random">R</button>
+            <button class="button divide operator" data-action="divide">÷</button>
             <button class="button seven number">7</button>
             <button class="button eight number">8</button>
             <button class="button nine number">9</button>
-            <button class="button minus operator">-</button>
+            <button class="button minus operator" data-action="minus">-</button>
             <button class="button four number">4</button>
             <button class="button five number">5</button>
             <button class="button six number">6</button>
-            <button class="button plus operator">+</button>
+            <button class="button plus operator" data-action="plus">+</button>
             <button class="button one number">1</button>
             <button class="button two number">2</button>
             <button class="button three number">3</button>
-            <button class="button dot">.</button>
+            <button class="button dot number" data-action="decimal">.</button>
             <button class="button zero number">0</button>
-            <button class="button equal">=</button>
-            <button class="button delete"><i class="fas fa-backspace"></i></button>
+            <button class="button equal" data-action="equal">=</button>
+            <button class="button delete" data-action="delete"><i class="fas fa-backspace"></i></button>
         </div>
     </div>
 
